feat: Add containerization and web interface support
- Add complete Podman/Docker containerization with OCI compliance
- Implement Flask-based web interface for report viewing and management
- Add container management scripts (run-podman.sh, Makefile, docker-compose.yml)
- Create comprehensive deployment guides and documentation
- Support flexible port configuration and environment-based setup
- Add health checking and monitoring capabilities
- Extend configuration for OAuth, AI enhancement, and web server options
- Provide multiple deployment options: local, containerized, and orchestrated

This transforms the tool from CLI-only to a modern containerized web application
with professional deployment capabilities and comprehensive documentation.

--- a/config.example.json
+++ b/config.example.json
@@ -49,5 +49,28 @@
       "cursor_integration": "Creates structured data files for Cursor IDE AI analysis",
       "gemini_selenium": "Automates Google Gemini web interface (requires manual login)"
     }
+  },
+  "web_server": {
+    "_comment": "Web interface for viewing and managing reports",
+    "enabled": true,
+    "host": "0.0.0.0",
+    "port": 8080,
+    "auto_start_scheduler": true,
+    "_instructions": {
+      "host": "0.0.0.0 binds to all interfaces, 127.0.0.1 for localhost only",
+      "port": "Port number for the web server (overridden by WEB_PORT env var in containers)",
+      "auto_start_scheduler": "Automatically start background scheduler for automated report generation"
+    }
+  },
+  "container": {
+    "_comment": "Container deployment settings",
+    "data_volume": "/app/data",
+    "config_volume": "/app/config",
+    "reports_volume": "/app/reports",
+    "_instructions": {
+      "data_volume": "Mount point for persistent data (last_run.txt, etc.)",
+      "config_volume": "Mount point for configuration files",
+      "reports_volume": "Mount point for generated reports"
+    }
   }
 }
