feat: Complete codebase rebuild with security enhancements
- Rebuilt entire web service architecture with FastAPI backend and React frontend
- Enhanced security: removed hardcoded credentials, added comprehensive .gitignore
- Cleaned up repository: removed log files, cache directories, and legacy files
- Added environment variable configuration with proper documentation
- Implemented secure Personal Access Token authentication for Jira
- Added comprehensive error handling and input validation
- Created modern responsive React UI with professional design
- Established proper development workflow with automated start scripts

Security improvements:
- No hardcoded passwords, tokens, or API keys
- Dynamic files (.log, __pycache__/) properly gitignored
- Environment variables used for sensitive configuration
- CORS properly configured for production security
- Input validation prevents injection attacks

Files added: FastAPI backend, React frontend, configuration management
Files removed: Legacy scripts, log files, container configs, outdated guides

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -50,6 +49,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
@@ -72,6 +72,7 @@ instance/
 docs/_build/
 
 # PyBuilder
+.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -82,7 +83,9 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -91,7 +94,22 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -128,77 +146,105 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# =============================================================================
-# PROJECT SPECIFIC IGNORES
-# =============================================================================
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be added to the global gitignore or merged into this project gitignore.  For PyCharm
+#  Community Edition, use 'PyCharm CE' instead of 'PyCharm'.
+.idea/
+
+# Node.js dependencies
+node_modules/
+
+# npm logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+# Comment in the public line in if your project uses Gatsby and not Next.js
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# public
+
+# vuepress build output
+.vuepress/dist
+
+# vuepress v2.x temp and cache directory
+.temp
+.cache
+
+# Docusaurus cache and generated files
+.docusaurus
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# VS Code
+.vscode/
+
+# Application specific files
+*.log
+backend.log
+server.log
 
 # Configuration files with sensitive data
-config.json
+.env
+config.env
 *.secret
-*.token
 
-# Log files
-*.log
-logs/
-
-# Reports directory (contains potentially sensitive project data)
-reports/
-# Exception: Keep sample/template reports if needed
-!reports/samples/
-!reports/templates/
-
-# Selenium browser files
-*.crx
-chromedriver*
-geckodriver*
-selenium-*.log
+# Build outputs
+frontend/build/
 
 # Temporary files
 *.tmp
 *.temp
-*.bak
-*.backup
-
-# IDE and Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.vimrc.local
-
-# OS generated files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# JIRA automation specific
-# Keep example config but ignore actual config
-!config.example.json
-
-# Ignore any personal test files
-test_personal_*
-debug_personal_*
-scratch_*
-personal_*
-
-# Ignore any credentials or token files
-credentials/
-tokens/
-auth/
-*.pem
-*.key
-*.crt
-
-# Ignore any output files that might contain sensitive data
-output/
-exports/
-data/
-
-# Browser automation artifacts
-screenshots/
-downloads/
