--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-requests>=2.28.0
-schedule>=1.2.0
-python-dotenv>=1.0.0
-jira>=3.4.0
-selenium>=4.15.0
-webdriver-manager>=4.0.0
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+jira==3.8.0
+python-dateutil==2.9.0.post0
+pydantic==2.10.3
+requests==2.32.3
+python-multipart==0.0.12
