--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@tailwindcss/forms": "^0.5.10",
-    "tailwindcss": "^4.1.12"
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.4.17"
   }
 }
